--- a/tweet-ui/src/main/res/drawable/tw__video_seekbar.xml
+++ b/tweet-ui/src/main/res/drawable/tw__video_seekbar.xml
@@ -15,17 +15,22 @@
   ~
   -->
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.twitter.sdk.android.tweetui.internal.VideoView
-        android:id="@+id/video_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"/>
+    <item
+        android:id="@android:id/background"
+        android:drawable="@drawable/tw__ic_seekbar_bg"/>
 
-    <com.twitter.sdk.android.tweetui.internal.VideoControlView
-        android:id="@+id/video_control_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"/>
-</merge>
+    <item android:id="@android:id/secondaryProgress">
+        <scale
+            android:drawable="@drawable/tw__ic_seekbar_secondary_bg"
+            android:scaleWidth="100%"/>
+    </item>
+
+    <item android:id="@android:id/progress">
+        <scale
+            android:drawable="@drawable/tw__ic_seekbar_progress_bg"
+            android:scaleWidth="100%"/>
+    </item>
+
+</layer-list>
