Add gif or duration badge to media view
Change-Id: I0974e4daf0960faea2ebeb5143ec7c7ef78b5acd

--- a/tweet-ui/src/main/res/drawable/tw__bg_media_badge.xml
+++ b/tweet-ui/src/main/res/drawable/tw__bg_media_badge.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2015 Twitter, Inc.
   ~
@@ -16,9 +15,8 @@
   ~
   -->
 
-<resources>
-    <!--Date Format strings-->
-    <!--These strings are in here because we pull translations manually from twitter-cldr-->
-    <string name="tw__relative_date_format_short">MMM dd</string>
-    <string name="tw__relative_date_format_long">MM/dd/yy</string>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="2dp"/>
+    <solid android:color="#4d000000"/>
+</shape>
