--- a/tweet-ui/src/main/res/drawable/tw__gif_badge.xml
+++ b/tweet-ui/src/main/res/drawable/tw__gif_badge.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2015 Twitter, Inc.
   ~
@@ -16,9 +15,13 @@
   ~
   -->
 
-<resources>
-    <!--Date Format strings-->
-    <!--These strings are in here because we pull translations manually from twitter-cldr-->
-    <string name="tw__relative_date_format_short">MMM dd</string>
-    <string name="tw__relative_date_format_long">MM/dd/yy</string>
-</resources>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/tw__bg_media_badge"/>
+    <item
+        android:left="@dimen/tw__gif_badge_padding"
+        android:bottom="@dimen/tw__gif_badge_padding"
+        android:right="@dimen/tw__gif_badge_padding"
+        android:top="@dimen/tw__gif_badge_padding">
+        <bitmap android:src="@drawable/tw__ic_gif_badge"/>
+    </item>
+</layer-list>
