Set link highlight color
Change-Id: Id7d2fb2b117892d2b2c6da3621a8333f187ab5df

--- a/tweet-ui/src/main/res/values/colors.xml
+++ b/tweet-ui/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
 <!-- see go/colors -->
 <resources>
     <color name="tw__tweet_action_color">#55acee</color>
+    <color name="tw__tweet_action_light_highlight_color">#ebeef0</color>
+    <color name="tw__tweet_action_dark_highlight_color">#667580</color>
     <color name="tw__tweet_container_border">#1a000000</color>
 
     <color name="tw__tweet_light_container_bg_color">#ffffff</color>
