--- a/tweet-ui/src/main/res/layout/tw__player_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__player_activity.xml
@@ -34,4 +34,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"/>
+
+    <TextView
+        android:id="@+id/call_to_action_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:padding="@dimen/tw__cta_padding"
+        android:layout_marginTop="@dimen/tw__cta_margin_top"
+        android:text="@string/tw__cta_text"
+        android:textSize="@dimen/tw__text_size_medium"
+        android:textColor="@color/tw__cta_text_color"
+        android:background="@drawable/tw__call_to_action"
+        android:visibility="gone"/>
 </merge>
