--- a/tweet-ui/src/main/res/values/dimens.xml
+++ b/tweet-ui/src/main/res/values/dimens.xml
@@ -60,10 +60,13 @@
     <!--Tweet Media-->
     <item name="tw__tweet_media_aspect_ratio" format="float" type="dimen">1.777777</item>
     <dimen name="tw__tweet_media_badge_margin">4dp</dimen>
-    <dimen name="tw__gif_badge_padding">4dp</dimen>
+    <dimen name="tw__badge_padding">4dp</dimen>
+    <dimen name="tw__cta_margin_top">12dp</dimen>
+    <dimen name="tw__cta_padding">8dp</dimen>
+    <dimen name="tw__cta_border_size">1dp</dimen>
+    <dimen name="tw__cta_radius">14dp</dimen>
 
     <!--CompactTweetView-->
-
     <!--Container-->
     <dimen name="tw__compact_tweet_container_padding_top">10.5dp</dimen>
     <dimen name="tw__compact_tweet_container_bottom_separator">13dp</dimen>
