Add progress spinner when video is buffering
Change-Id: I75e21d841573068df047665d9079b9bc0cfe691e

--- a/tweet-ui/src/main/res/layout/tw__player_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__player_activity.xml
@@ -23,6 +23,12 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
 
+    <ProgressBar
+        android:id="@+id/video_progress_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
     <com.twitter.sdk.android.tweetui.internal.VideoControlView
         android:id="@+id/video_control_view"
         android:layout_width="match_parent"
