Fix lint errors
Change-Id: I2e34bdb68e43fc999937487fde9856f62a9e81ff

--- a/tweet-ui/src/main/res/layout/tw__tweet.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet.xml
@@ -46,8 +46,7 @@
         tools:ignore="ContentDescription"
         android:id="@+id/tw__tweet_author_avatar"
         style="@style/tw__TweetAvatar"
-        android:layout_below="@id/tw__tweet_retweeted_by"
-        tools:background="@color/tw__tweet_media_preview_bg_color"/>
+        android:layout_below="@id/tw__tweet_retweeted_by"/>
 
     <TextView
         android:id="@+id/tw__tweet_author_full_name"
