--- a/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
@@ -32,8 +32,7 @@
         tools:ignore="ContentDescription"
         android:id="@+id/tw__tweet_author_avatar"
         android:layout_below="@id/tw__tweet_retweeted_by"
-        style="@style/tw__TweetAvatar.Compact"
-        tools:background="@color/tw__tweet_media_preview_bg_color"/>
+        style="@style/tw__TweetAvatar.Compact"/>
 
     <!--Name and timestamp don't ellipsize, but @username in the middle does ellipsize-->
     <LinearLayout
